Fix Text Cutoff

--- a/src/screens/SeventhScreen.css
+++ b/src/screens/SeventhScreen.css
@@ -50,7 +50,6 @@
 }
 
 .AnswerText {
-  margin-left: -2.5vw;
   font-size: 1.4vw;
   font-weight: 300;
 }
